[gd_scene load_steps=8 format=3 uid="uid://dnds06cmnwyee"]

[ext_resource type="Texture2D" uid="uid://bhocepugo503t" path="res://assets/Prototype_Character.png" id="1_rcpx5"]
[ext_resource type="Script" path="res://ui/title_screen.gd" id="1_wfytp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jf0b2"]
atlas = ExtResource("1_rcpx5")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_npnrn"]
atlas = ExtResource("1_rcpx5")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kaiv"]
atlas = ExtResource("1_rcpx5")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7sy8"]
atlas = ExtResource("1_rcpx5")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ajv67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf0b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npnrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kaiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7sy8")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Title Screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wfytp")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1150.0
offset_bottom = 646.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 400

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Just Another Vampire Survivors-like Game"
horizontal_alignment = 1

[node name="DummySprite" type="AnimatedSprite2D" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(574, 258)
scale = Vector2(4.25, 3.90625)
sprite_frames = SubResource("SpriteFrames_ajv67")
frame_progress = 0.126587

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="StartGame" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="ExitGame" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Game"
